infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: acss.dev
      http:
        paths:
          - path: /api/patients/?(.*)
            pathType: Prefix
            backend:
              service:
                name: patients-srv
                port:
                  number: 3000
          - path: /api/alarm/?(.*)
            pathType: Prefix
            backend:
              service:
                name: alarm-srv
                port:
                  number: 3000
